[package]
name = "async-httplib"
description = "Low-level HTTP helpers."
license = "MIT"
version = "0.5.0"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/async-httplib"
homepage = "https://github.com/xpepermint/async-httplib"
repository = "https://github.com/xpepermint/async-httplib"
readme = "README.md"

[dependencies]
async-std = { version = "^1.6.2" }

[dev-dependencies]
async-std = { version = "^1.6.2", features = ["attributes"] }
